# stream-logs-to-s3

./: .gitignore  Cargo.toml  LICENSE-MIT  Makefile  README.md  alpine.dockerfile  amzn2.dockerfile  amzn2023.dockerfile  centos.dockerfile  el7.dockerfile  index.html  musl.dockerfile
.github/: dependabot.yml
.github/workflows/: release.yml  rust.yml
src/: async_utils.rs  ec2.rs  ecs.rs  error.rs  main.rs
