[package]
name = "stream-logs-to-s3"
version = "0.1.0"
authors = ["David Cuthbert <dacut@kanga.org>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Buffer text to S3, batching them up by size and/or time period. This is intended to be a replacement for rotatelogs on (e.g.) Apache HTTPD servers running in the cloud."
readme = "README.md"
homepage = "https://github.com/ionosphere-io/stream-logs-to-s3"
repository = "https://github.com/ionosphere-io/stream-logs-to-s3.git"
keywords = ["logging", "S3", "AWS", "log-streaming"]
categories = ["command-line-utilities", "web-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-compression = { version = "^0.3", features = [ "gzip", "tokio" ]}
base32 = "^0.4"
byte-unit = "^4.0.10"
chrono = "^0.4"
env_logger = "^0.8"
flate2 = { version = "^1.0", features = [ "tokio" ] }
futures = "^0.3"
gethostname = "^0.2"
get_if_addrs = "^0.5"
getopts = "^0.2"
humantime = "^2.0"
lazy_static = "^1.4"
log = "^0.4"
rand = { version = "^0.8", features = [ "std", "std_rng" ] }
regex = "^1.3"
reqwest = { version = "^0.11", features = [ "json" ] }
rusoto_core = "^0.46"
rusoto_credential = "^0.46"
rusoto_s3 = "^0.46"
serde = { version = "^1.0", features = [ "derive" ] }
serde_derive = "^1.0"
serde_json = "^1.0"
tempfile = "^3.2"
tokio = { version = "^1.4", features = [ "fs", "io-std", "io-util", "macros", "rt-multi-thread", "time" ] }
tokio-util = { version = "^0.6", features = [ "io" ]}

[target.'cfg(unix)'.dependencies]
nix = "^0.20"