[package]
name = "stream-logs-to-s3"
version = "0.1.5"
authors = ["David Cuthbert <dacut@kanga.org>"]
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Buffer text to S3, batching them up by size and/or time period. This is intended to be a replacement for rotatelogs on (e.g.) Apache HTTPD servers running in the cloud."
readme = "README.md"
homepage = "https://github.com/ionosphere-io/stream-logs-to-s3"
repository = "https://github.com/ionosphere-io/stream-logs-to-s3.git"
keywords = ["logging", "S3", "AWS", "log-streaming"]
categories = ["command-line-utilities", "web-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "^1.0"
async-compression = { version = "^0.4", features = [ "gzip", "tokio" ] }
aws-config = { version = "^1.8", features = [ "behavior-version-latest" ] }
aws-sdk-s3 = "^1.129"
aws-smithy-types = { version = "^1.4", features = [ "rt-tokio" ] }
base32 = "^0.5"
byte-unit = "^5.2"
clap = { version = "^4.0", features = [ "derive", "env", "wrap_help" ] }
env_logger = "^0.11"
flate2 = { version = "^1.1" }
futures = "^0.3"
gethostname = "^1.1"
get_if_addrs = "^0.5"
humantime = "^2.3"
lazy_static = "^1.5"
log = "^0.4"
rand = { version = "0.10", features = [ "std", "std_rng" ] }
regex = "^1.12"
reqwest = { version = "^0.13", features = [ "json" ] }
serde = { version = "^1.0", features = [ "derive" ] }
serde_derive = "^1.0"
serde_json = "^1.0"
tempfile = "^3.27"
time = { version = "^0.3", features = [ "macros", "serde", "std" ] }
tokio = { version = "^1.51", features = [ "fs", "io-std", "io-util", "macros", "rt-multi-thread", "time" ] }

[target.'cfg(unix)'.dependencies]
nix = { version = "^0.31", features = [ "fs" ] }